# buderus2mqtt

./: .dockerignore  Dockerfile  LICENSE.md  README.md  buderus2mqtt  buderus2mqtt.conf.example  pyproject.toml  requirements.txt  run
.forgejo/workflows/: docker-build.yaml
.github/workflows/: ci.yml
src/buderus2mqtt/: __init__.py  __main__.py  daemon.py
tests/: test_daemon.py
